@@ -1,5 +1,10 @@
 2006-12-01  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add the Google Video Pointer mime-types
+	(alias'ed to text/google-video-pointer)
+
+2006-12-01  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: add "video/flv" as an alias for FLV videos,
 	as used by YouTube's HTTP server
 
